# runbot-desktop

./: .gitmodules  README.md  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  forward-viewer.json  image-viewer.json
src-tauri/icons/: generate-icons.sh  icon.icns
src-tauri/src/: avatar.rs  image.rs  lib.rs  main.rs  qface_embed.rs  runbot.rs  storage.rs
src/components/: ChatArea.vue  ChatList.vue  ContactList.vue  GroupList.vue  Login.vue  MainView.vue  RequestList.vue
src/pages/: forward-viewer.html  image-viewer.html
src/services/: avatar.ts  config.ts  image.ts  notify.ts  request-storage.ts  runbot.ts  storage.ts
src/stores/: chat-input.ts  chats.ts  connection.ts  contacts.ts  group-members.ts  requests.ts
src/utils/: cqcode.ts  qq-face.ts
